@@ -1,18 +1,22 @@
 package com.hcmus.fitservice.service;
 
-import com.hcmus.fitservice.dto.FoodEntryDto;
+import com.hcmus.fitservice.dto.response.FoodEntryResponse;
+import com.hcmus.fitservice.dto.request.FoodEntryRequest;
 import com.hcmus.fitservice.dto.response.MealLogResponse;
 import com.hcmus.fitservice.dto.response.ApiResponse;
 import com.hcmus.fitservice.exception.ResourceAlreadyExistsException;
 import com.hcmus.fitservice.exception.ResourceNotFoundException;
+import com.hcmus.fitservice.mapper.FoodEntryMapper;
+import com.hcmus.fitservice.mapper.MealLogMapper;
 import com.hcmus.fitservice.model.Food;
 import com.hcmus.fitservice.model.MealEntry;
 import com.hcmus.fitservice.model.MealLog;
+import com.hcmus.fitservice.model.ServingUnit;
 import com.hcmus.fitservice.model.type.MealType;
-import com.hcmus.fitservice.model.type.ServingUnit;
 import com.hcmus.fitservice.repository.FoodRepository;
 import com.hcmus.fitservice.repository.MealEntryRepository;
 import com.hcmus.fitservice.repository.MealLogRepository;
+import com.hcmus.fitservice.repository.ServingUnitRepository;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -22,7 +26,6 @@ import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -33,6 +36,12 @@ public class MealLogServiceImpl implements MealLogService {
     private final FoodRepository foodRepository;
 
     private final MealEntryRepository mealEntryRepository;
+
+    private final ServingUnitRepository servingUnitRepository;
+
+    private final FoodEntryMapper foodEntryMapper;
+
+    private final MealLogMapper mealLogMapper;
 
     @Override
     public ApiResponse<?> createDailyMealLogs(UUID userId, Date date) {
@@ -67,31 +76,36 @@ public class MealLogServiceImpl implements MealLogService {
     }
 
     @Override
-    public ApiResponse<FoodEntryDto> addMealEntry(UUID mealLogId, UUID foodId, String servingUnit, Double numberOfServings) {
-        // Find the meal log by ID
+    public ApiResponse<FoodEntryResponse> addMealEntry(UUID mealLogId, FoodEntryRequest foodEntryRequest) {
+        // Check if meal log exists
         MealLog mealLog = mealLogRepository.findById(mealLogId)
                 .orElseThrow(() -> new ResourceNotFoundException("Meal log not found with ID: " + mealLogId));
 
-        // Find food by ID
-        Food food = foodRepository.findById(foodId)
-                .orElseThrow(() -> new ResourceNotFoundException("Food not found with ID: " + foodId));
+        // Check if food exists
+        Food food = foodRepository.findById(foodEntryRequest.getFoodId())
+                .orElseThrow(() -> new ResourceNotFoundException("Food not found with ID: " + foodEntryRequest.getFoodId()));
+
+        // Check if number of servings is valid
+        ServingUnit servingUnit = servingUnitRepository.findById(foodEntryRequest.getServingUnitId())
+                .orElseThrow(() -> new ResourceNotFoundException("Serving unit not found with ID: " + foodEntryRequest.getServingUnitId()));
 
         // Create new meal entry
         MealEntry mealEntry = new MealEntry();
         mealEntry.setMealLog(mealLog);
         mealEntry.setFood(food);
-        mealEntry.setNumberOfServings(numberOfServings);
-        mealEntry.setServingUnit(ServingUnit.valueOf(servingUnit));
+        mealEntry.setNumberOfServings(foodEntryRequest.getNumberOfServings());
+        mealEntry.setServingUnit(servingUnit);
 
-        mealEntryRepository.save(mealEntry);
+        MealEntry savedMealEntry = mealEntryRepository.save(mealEntry);
 
-        FoodEntryDto foodEntryDto = new FoodEntryDto(mealEntry.getMealEntryId(), food.getFoodId(), mealEntry.getServingUnit().name(), mealEntry.getNumberOfServings());
+        // Convert to Dto
+        FoodEntryResponse foodEntryResponse = foodEntryMapper.convertToFoodEntryDto(savedMealEntry);
 
         // Return response
-        return ApiResponse.<FoodEntryDto>builder()
+        return ApiResponse.<FoodEntryResponse>builder()
                 .status(201)
                 .generalMessage("Meal entry added successfully")
-                .data(foodEntryDto)
+                .data(foodEntryResponse)
                 .timestamp(LocalDateTime.now())
                 .build();
     }
@@ -107,20 +121,7 @@ public class MealLogServiceImpl implements MealLogService {
         }
 
         // Convert to Dto
-        List<MealLogResponse> mealLogResponses = mealLogs.stream().map(
-                mealLog -> new MealLogResponse(
-                        mealLog.getMealLogId(),
-                        date,
-                        mealLog.getMealType().name(),
-                        mealLog.getMealEntries().stream()
-                                .map(mealEntry -> new FoodEntryDto(
-                                        mealEntry.getMealEntryId(),
-                                        mealEntry.getFood().getFoodId(),
-                                        mealEntry.getServingUnit().name(),
-                                        mealEntry.getNumberOfServings()))
-                                .collect(Collectors.toList())
-                )
-        ).collect(Collectors.toList());
+        List<MealLogResponse> mealLogResponses = mealLogs.stream().map(mealLogMapper::converToMealLogResponse).toList();
 
         // Return response
         return ApiResponse.<List<MealLogResponse>>builder()
